--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,79 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:id="@+id/error_linear_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    >
+    android:layout_marginTop="@dimen/margin_medium"
+    android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:id="@+id/success_linear_layout"
+    <TextView
+        android:id="@+id/header_textview_recycler_item"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_height="wrap_content"
+        style="@style/HeaderTextStyle"
+        tools:text="Header"/>
+
+    <TextView
+        android:id="@+id/description_textview_recycler_item"
+        android:layout_width="wrap_content"
+        style="@style/BaseTextStyle"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_height="wrap_content"
+        tools:text="Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."/>
+
+    <View xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        >
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/main_activity_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/search_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginEnd="@dimen/margin_medium"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:src="@drawable/ic_search"
-            />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/loading_frame_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        >
-
-        <ProgressBar
-            android:id="@+id/progress_bar_horizontal"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            />
-
-        <ProgressBar
-            android:id="@+id/progress_bar_round"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            />
-    </FrameLayout>
-
-    <LinearLayout
-        android:id="@+id/error_linear_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone"
-        >
-
-        <TextView
-            android:id="@+id/error_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/error_textview_stub"
-            />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/reload_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/reload_button"
-            />
-    </LinearLayout>
-</FrameLayout>
+        android:layout_height="@dimen/hairline"
+        android:layout_marginTop="@dimen/margin_small"
+        android:background="@color/color_gray"/>
+</LinearLayout>
