--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:id="@+id/error_linear_layout"
-    android:layout_width="match_parent"
-    android:layout_marginTop="@dimen/margin_medium"
-    android:layout_height="wrap_content">
-
-    <TextView
-        android:id="@+id/header_textview_recycler_item"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:layout_height="wrap_content"
-        style="@style/HeaderTextStyle"
-        tools:text="Header"/>
-
-    <TextView
-        android:id="@+id/description_textview_recycler_item"
-        android:layout_width="wrap_content"
-        style="@style/BaseTextStyle"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:layout_height="wrap_content"
-        tools:text="Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."/>
-
-    <View xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/hairline"
-        android:layout_marginTop="@dimen/margin_small"
-        android:background="@color/color_gray"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
+
+    <FrameLayout
+            android:id="@+id/working_linear_layout"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/main_activity_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/search_fab"
+                android:src="@drawable/ic_search"
+                android:layout_width="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:layout_height="wrap_content"/>
+    </FrameLayout>
+
+    <FrameLayout
+            android:id="@+id/loading_frame_layout"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@color/color_white_transparent"
+            android:layout_height="match_parent">
+
+        <ProgressBar
+                android:layout_gravity="center"
+                android:id="@+id/progress_bar_horizontal"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        <ProgressBar
+                android:layout_gravity="center"
+                android:id="@+id/progress_bar_round"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </FrameLayout>
+</FrameLayout>
